# cordite

./: Cargo.toml  README.md
examples/config/: default.toml
src/: main.rs
src/cli/: add.rs  grep.rs  lint.rs  list.rs  mod.rs  remove.rs  sync.rs
src/config/: mod.rs
src/metadata/: entity.rs  mod.rs
