[package]
name = "cordite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bpaf = { version = "0.9.20", features = ["bright-color"] }
config = "0.15.19"
lofty = "0.22.4"
musicbrainz_rs = "0.12.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.44"

[profile.release]
strip = true
